# gtensor

./: Cargo.toml  README.md
benches/: blas_matmul.rs
docs/operators/: dense.md
src/: descriptors.rs  graph.rs  index.rs  lib.rs  operators.rs  optimizer.rs  shape.rs  tensor.rs  tensor2.rs  tensor3.rs
src/tests/: convolve.rs  matmul.rs  misc.rs  mod.rs  scalar_elem.rs  tensor_elem.rs  test_tensor.rs
