[package]
name = "gtensor"
version = "0.5.4"
edition = "2021"
author = "Rylan Yancey"
description = "A Machine Learning Tensor Library for constructing Graphs with Neural Network Operations"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning, tensor"]
homepage = "https://github.com/Canyon-ml/gtensor"

[dependencies]
matrixmultiply = "0.3.2"
anyhow = "1.0.68"
fastrand = "1.8.0"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
rayon = "1.6.1"
pretty_assertions = "1.3.0"
